--- a/LibQuestionnaire/AndroidManifest.xml
+++ b/LibQuestionnaire/AndroidManifest.xml
@@ -12,6 +12,12 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <activity
+            android:name="nl.changer.questionnaire.TestsHolderActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden" />
     </application>
 
 </manifest>
